--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
+    "ios": "expo start -c --ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,7 +17,7 @@
     "react-native": "0.72.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
